2026-09-26 개발분 반영 - Profile / Activity / KeywordMastery 이행