@@ -2,10 +2,10 @@ package jp.co.translacat.domain.languagelearning.practice.policy;
 
 import jp.co.translacat.domain.languagelearning.common.enums.PracticeDomain;
 import jp.co.translacat.domain.languagelearning.common.enums.PracticeSetStatus;
+import jp.co.translacat.domain.languagelearning.growth.model.GrowthProfileSnapshot;
+import jp.co.translacat.domain.languagelearning.growth.port.GrowthReadGateway;
 import jp.co.translacat.domain.languagelearning.practice.entity.PracticeSet;
 import jp.co.translacat.domain.languagelearning.practice.repository.PracticeSetRepository;
-import jp.co.translacat.domain.languagelearning.profile.entity.LearningProfile;
-import jp.co.translacat.domain.languagelearning.profile.repository.LearningProfileRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -14,16 +14,15 @@ import java.util.List;
 @Component
 @RequiredArgsConstructor
 public class PracticeComplexityPolicy {
-    private final LearningProfileRepository profileRepository;
+    private final GrowthReadGateway growth;
     private final PracticeSetRepository practiceSetRepository;
 
     public int resolve(Long userId, PracticeDomain domain, String mode) {
-        LearningProfile profile = profileRepository.findByUserId(userId).orElse(null);
-        int band = baseBand(profile == null ? null : profile.getBaseLevelScore());
-        List<PracticeSet> recent = practiceSetRepository
-                .findTop5ByUserIdAndDomainAndModeAndStatusOrderByLearningDateDescIdDesc(
-                        userId, domain, mode, PracticeSetStatus.COMPLETED
-                );
+        GrowthProfileSnapshot profile = growth.snapshot(userId).profile();
+        int band = baseBand(profile == null ? null : profile.baseLevelScore());
+        List<PracticeSet> recent =
+                practiceSetRepository.findTop5ByUserIdAndDomainAndModeAndStatusOrderByLearningDateDescIdDesc(userId,
+                        domain, mode, PracticeSetStatus.COMPLETED);
         double average = recent.stream()
                 .map(PracticeSet::getOfficialScore)
                 .filter(java.util.Objects::nonNull)
@@ -37,7 +36,7 @@ public class PracticeComplexityPolicy {
                 band--;
             }
         }
-        return Math.max(1, Math.min(5, band));
+        return Math.clamp(band, 1, 5);
     }
 
     public int baseBand(Double score) {
@@ -50,8 +49,6 @@ public class PracticeComplexityPolicy {
     }
 
     public int[] mix(PracticeDomain domain) {
-        return domain == PracticeDomain.READING
-                ? new int[]{1, 3, 1}
-                : new int[]{2, 6, 2};
+        return domain == PracticeDomain.READING ? new int[]{1, 3, 1} : new int[]{2, 6, 2};
     }
 }
