@@ -28,6 +28,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -64,36 +65,21 @@ class DailyWritingRegenerationStateCommandServiceTest {
 
     @BeforeEach
     void setUp() {
-        service = new DailyWritingRegenerationStateCommandService(
-                dailySetRepository,
-                itemRepository,
-                answerRepository,
-                snapshotService,
-                requestFactory,
-                itemCommandService,
-                itemRevisionService
-        );
+        service = new DailyWritingRegenerationStateCommandService(dailySetRepository, itemRepository, answerRepository,
+                snapshotService, requestFactory, itemCommandService, itemRevisionService);
     }
 
     @Test
     void claimMarksSetBeforeReturningAiRequest() {
         stubClaimableSet();
-        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L))
-                .thenReturn(List.of(item));
-        when(answerRepository.existsByDailyItemId(30L))
-                .thenReturn(false);
+        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L)).thenReturn(List.of(item));
+        when(answerRepository.existsByDailyItemId(30L)).thenReturn(false);
         when(snapshotService.read(dailySet)).thenReturn(snapshot);
         when(snapshot.learningLanguage()).thenReturn("ja");
         when(itemRevisionService.revision(item)).thenReturn("rev-1");
         AiDailyWritingGenerationRequestDto request = request("request-id");
-        when(requestFactory.createRegeneration(
-                eq(10L),
-                eq(dailySet),
-                eq(snapshot),
-                eq(1),
-                any(DifficultyDistributionDto.class),
-                anyString()
-        )).thenReturn(request);
+        when(requestFactory.createRegeneration(eq(10L), eq(dailySet), eq(snapshot), eq(1),
+                any(DifficultyDistributionDto.class), anyString(), eq(Set.of(30L)))).thenReturn(request);
 
         RegenerationClaim claim = service.claim(10L, 20L);
 
@@ -101,15 +87,11 @@ class DailyWritingRegenerationStateCommandServiceTest {
         assertThat(claim.expectedCount()).isEqualTo(1);
         assertThat(claim.request()).isSameAs(request);
         assertThat(claim.targets()).hasSize(1);
-        RegenerationTarget target = claim.targets().get(0);
+        RegenerationTarget target = claim.targets().getFirst();
         assertThat(target.itemId()).isEqualTo(30L);
         assertThat(target.contentRevision()).isEqualTo("rev-1");
-        ArgumentCaptor<String> tokenCaptor =
-                ArgumentCaptor.forClass(String.class);
-        verify(dailySet).claimRegeneration(
-                tokenCaptor.capture(),
-                any()
-        );
+        ArgumentCaptor<String> tokenCaptor = ArgumentCaptor.forClass(String.class);
+        verify(dailySet).claimRegeneration(tokenCaptor.capture(), any());
         assertThat(tokenCaptor.getValue()).isEqualTo(claim.token());
     }
 
@@ -120,13 +102,9 @@ class DailyWritingRegenerationStateCommandServiceTest {
         when(dailySet.getRegenerationCount()).thenReturn(0);
         when(dailySet.canClaimRegeneration(any())).thenReturn(false);
 
-        assertThatThrownBy(() -> service.claim(10L, 20L))
-                .isInstanceOf(BusinessException.class)
-                .satisfies(throwable -> assertThat(
-                        ((BusinessException) throwable).getErrorCode()
-                ).isEqualTo(
-                        "LANGUAGE_LEARNING_WRITING_REGENERATION_IN_PROGRESS"
-                ));
+        assertThatThrownBy(() -> service.claim(10L, 20L)).isInstanceOf(BusinessException.class)
+                .satisfies(throwable -> assertThat(((BusinessException) throwable).getErrorCode()).isEqualTo(
+                        "LANGUAGE_LEARNING_WRITING_REGENERATION_IN_PROGRESS"));
 
         verify(snapshotService, never()).read(any());
     }
@@ -134,73 +112,45 @@ class DailyWritingRegenerationStateCommandServiceTest {
     @Test
     void publishRejectsAnswerThatAppearedDuringAiCall() {
         RegenerationClaim claim = publishableClaim("rev-1");
-        AiDailyWritingGenerationResponseDto response = response(
-                claim.request().requestId()
-        );
+        AiDailyWritingGenerationResponseDto response = response(claim.request().requestId());
         stubPublishableSet(claim);
-        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L))
-                .thenReturn(List.of(item));
+        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L)).thenReturn(List.of(item));
         when(itemRevisionService.revision(item)).thenReturn("rev-1");
-        when(answerRepository.existsByDailyItemId(30L))
-                .thenReturn(true);
+        when(answerRepository.existsByDailyItemId(30L)).thenReturn(true);
 
-        assertThatThrownBy(() -> service.publish(claim, response))
-                .isInstanceOf(BusinessException.class)
-                .satisfies(throwable -> assertThat(
-                        ((BusinessException) throwable).getErrorCode()
-                ).isEqualTo(
-                        "LANGUAGE_LEARNING_WRITING_REGENERATION_CONFLICT"
-                ));
+        assertThatThrownBy(() -> service.publish(claim, response)).isInstanceOf(BusinessException.class)
+                .satisfies(throwable -> assertThat(((BusinessException) throwable).getErrorCode()).isEqualTo(
+                        "LANGUAGE_LEARNING_WRITING_REGENERATION_CONFLICT"));
 
-        verify(itemCommandService, never()).replaceAll(
-                anyString(),
-                any(),
-                any()
-        );
+        verify(itemCommandService, never()).replaceAll(anyString(), any(), any());
     }
 
     @Test
     void publishRejectsContentChangedDuringAiCall() {
         RegenerationClaim claim = publishableClaim("rev-1");
-        AiDailyWritingGenerationResponseDto response = response(
-                claim.request().requestId()
-        );
+        AiDailyWritingGenerationResponseDto response = response(claim.request().requestId());
         stubPublishableSet(claim);
-        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L))
-                .thenReturn(List.of(item));
+        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L)).thenReturn(List.of(item));
         when(itemRevisionService.revision(item)).thenReturn("rev-2");
 
-        assertThatThrownBy(() -> service.publish(claim, response))
-                .isInstanceOf(BusinessException.class);
+        assertThatThrownBy(() -> service.publish(claim, response)).isInstanceOf(BusinessException.class);
 
-        verify(itemCommandService, never()).replaceAll(
-                anyString(),
-                any(),
-                any()
-        );
+        verify(itemCommandService, never()).replaceAll(anyString(), any(), any());
     }
 
     @Test
     void publishReplacesOnlyStillUnansweredUnchangedTargets() {
         RegenerationClaim claim = publishableClaim("rev-1");
-        AiDailyWritingGenerationResponseDto response = response(
-                claim.request().requestId()
-        );
+        AiDailyWritingGenerationResponseDto response = response(claim.request().requestId());
         stubPublishableSet(claim);
-        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L))
-                .thenReturn(List.of(item));
+        when(itemRepository.findAllByDailySetIdOrderByOrderNoAsc(20L)).thenReturn(List.of(item));
         when(itemRevisionService.revision(item)).thenReturn("rev-1");
-        when(answerRepository.existsByDailyItemId(30L))
-                .thenReturn(false);
+        when(answerRepository.existsByDailyItemId(30L)).thenReturn(false);
 
         DailyWritingSet result = service.publish(claim, response);
 
         assertThat(result).isSameAs(dailySet);
-        verify(itemCommandService).replaceAll(
-                "ja",
-                List.of(item),
-                response.items()
-        );
+        verify(itemCommandService).replaceAll("ja", List.of(item), response.items());
         verify(dailySet).incrementRegeneration();
         verify(dailySet).releaseRegeneration("token");
     }
@@ -217,69 +167,33 @@ class DailyWritingRegenerationStateCommandServiceTest {
     }
 
     private void stubOwnedSet() {
-        when(dailySetRepository.findLockedById(20L))
-                .thenReturn(Optional.of(dailySet));
+        when(dailySetRepository.findLockedById(20L)).thenReturn(Optional.of(dailySet));
         when(dailySet.getUser()).thenReturn(user);
         when(user.getId()).thenReturn(10L);
     }
 
     private void stubPublishableSet(RegenerationClaim claim) {
-        when(dailySetRepository.findLockedById(20L))
-                .thenReturn(Optional.of(dailySet));
-        when(dailySet.ownsRegeneration(claim.token()))
-                .thenReturn(true);
+        when(dailySetRepository.findLockedById(20L)).thenReturn(Optional.of(dailySet));
+        when(dailySet.ownsRegeneration(claim.token())).thenReturn(true);
         when(item.getId()).thenReturn(30L);
         when(item.getOrderNo()).thenReturn(2);
         when(item.getDifficulty()).thenReturn(DailyWritingDifficulty.NORMAL);
     }
 
     private RegenerationClaim publishableClaim(String revision) {
-        DifficultyDistributionDto distribution =
-                new DifficultyDistributionDto(0, 1, 0);
-        return new RegenerationClaim(
-                20L,
-                "token",
-                request("request-id"),
-                List.of(new RegenerationTarget(
-                        30L,
-                        2,
-                        DailyWritingDifficulty.NORMAL,
-                        revision
-                )),
-                distribution,
-                DailyWritingType.TRANSLATION,
-                "ja"
-        );
+        DifficultyDistributionDto distribution = new DifficultyDistributionDto(0, 1, 0);
+        return new RegenerationClaim(20L, "token", request("request-id"),
+                List.of(new RegenerationTarget(30L, 2, DailyWritingDifficulty.NORMAL, revision)), distribution,
+                DailyWritingType.TRANSLATION, "ja");
     }
 
     private AiDailyWritingGenerationRequestDto request(String requestId) {
-        return new AiDailyWritingGenerationRequestDto(
-                requestId,
-                "ko",
-                "ja",
-                DailyWritingType.TRANSLATION,
-                1,
-                new DifficultyDistributionDto(0, 1, 0),
-                List.of(),
-                null,
-                null,
-                List.of(),
-                List.of(),
-                LocalDate.of(2026, 9, 12),
-                "snapshot",
-                null,
-                DiversityContext.empty(),
-                null
-        );
+        return new AiDailyWritingGenerationRequestDto(requestId, "ko", "ja", DailyWritingType.TRANSLATION, 1,
+                new DifficultyDistributionDto(0, 1, 0), List.of(), null, null, List.of(), List.of(),
+                LocalDate.of(2026, 9, 12), "snapshot", null, DiversityContext.empty(), null);
     }
 
-    private AiDailyWritingGenerationResponseDto response(
-            String requestId
-    ) {
-        return new AiDailyWritingGenerationResponseDto(
-                requestId,
-                "prompt",
-                List.of()
-        );
+    private AiDailyWritingGenerationResponseDto response(String requestId) {
+        return new AiDailyWritingGenerationResponseDto(requestId, "prompt", List.of());
     }
 }
